--- a/recipebook/src/pages/shopping-list/shopping-list.html
+++ b/recipebook/src/pages/shopping-list/shopping-list.html
@@ -1,10 +1,20 @@
 <ion-header>
   <ion-navbar>
+    <ion-buttons start>
+      <button ion-button icon-only menuToggle>
+        <ion-icon name="menu"></ion-icon>
+      </button>
+    </ion-buttons>
+    <ion-buttons end>
+      <button ion-button icon-only (click)="onShowOptions($event)">
+        <ion-icon name="more"></ion-icon>
+      </button>
+    </ion-buttons>
     <ion-title>shopping-list</ion-title>
   </ion-navbar>
 </ion-header>
 <ion-content padding>
-  <form #f="ngForm" (ngSubmit)="onAddItem(f)" >
+  <form #f="ngForm" (ngSubmit)="onAddItem(f)">
     <ion-list>
       <ion-item>
         <ion-label fixed>
